--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -7,22 +7,35 @@ body {
   width: 400px;
   background: #fff;
   margin: 16px auto;
+  padding: 8px;
 }
 
 .title {
   background: #e3f4ff;
+  font-size: 16px;
+  margin-bottom: 8px;
+  padding: 8px;
 }
 
 .content {
   background: #e3f4ff;
+  margin-bottom: 8px;
+  padding: 8px;
 }
 
 .button-container {
   background: #e3f4ff;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  padding: 8px;
+
 }
 
 button {
   display: block;
   background: white;
   border: 1px solid #eee;
+  margin-left: auto;
+  margin-right: auto;
 }
