--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 0.5rem;
 }
 
 .logo {
@@ -12,13 +13,13 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
-  margin: 1rem;
+  margin: 0.5rem;
 }
 
 .left-links > *,
 .right-links > * {
   display: flex;
-  gap: 1rem;
+  gap: 0.5rem;
 }
 
 ul {
